# exchange-orderbook

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  diesel.toml  docker-compose.yml  mkdata.py  package.json  rustfmt.toml
.sqlx/: query-035ce194a271627e35feaab99ad8b10d71dd6fa9f533e14385aee0a58090657d.json  query-0494381d11a05f3b6036f9ea00872079030ae89f71c5fc4c8811d06843e9c143.json  query-06d242845239683ef6da59c6cdfe76d1ded2db8c297f6c0bacdbeeb6f8879889.json  query-0a0f0ad2d2fb0b1dadcdaad27d2f793b910135b6996c097f5d2d9ff1f9c845b8.json  query-13fc6cf41b206b4fa002c0e5f9dee452f890da38809650859e801e0c8a8dfbe6.json  query-173f10bbf6cc16814a72e8d88fe3c251a4d115c89bf152e844f771ee0521c659.json  query-1bb6c8b845d3261cb39a2e901ac5ac690c31de5727d4df663a6c799217bcff9a.json  query-1c84a78aeaea4d80770ebb5588fb4352f3757e996a25c518bbb3358c0e9c43d9.json  query-22fcee1360f095c035e4caa16d08b8479a5eac050277b01314328b05e5246f42.json  query-4a4b5696203b40fdf71d6fc96a873494f5ef6a07941a0da3bef58e54216dff84.json  query-53ed7e84c9a70694492d0ad4d42e1666b8b9304ffbafec1730346d01703b2078.json  query-54da9939b8a695deb39305a79b8191f5a446d723fa57a3a467cdff39d0e5ef4c.json  query-55f9278fe0a380edaab13a21d5e1db2a85cb7231e6fd667690756f22064561be.json  query-5ad830c608b47962d083cf4163d0b9cd24c368be760d565f0ffe6f3d94b61ab7.json  query-5d143de5c9e9d4a864cc88235f8a6c04970b30679f26b3a949c4a7cb507afad7.json  query-5efce3b1e09cb00799a7e106ddeba75dcff7b80f6e9f1db2fa5727bab08fac17.json  query-6205e5ae2dea2fa8db53ad755d2fce555fb1866900d25a17c42455a1bc7f321c.json  query-7a2d5b8bcbc1563088e069388bfb35f091ac15091bd433c29f33e73cb929bf02.json  query-918dd9ea909ca010d67d4105630a6193cffcac09f79407efcaabe1c29cfa9d38.json  query-996d977d3eeee6b4724492dff4a4ffb4ab4f1d94107c2902d442fc1759261db5.json  query-9a3e2a04d6b9346a569ad600c1f68b0a571453bfbcd6d2921b6e285c1a61c46f.json  query-9dbc35a108ace9e41f5de4fa5f042d4de7f34539e564e87cb61bb1de1544faa7.json  query-a88760a13157115620b683ab22ea18203931f4fe256ce2049060063844238bf2.json  query-add086cc5ae072eb94a3b15660c46a498610ff2190772fa717a42ec4b9ef6d8a.json  query-b537894412a4aa136f589ebbd5cbfcdc79214e989ef622d4dcd1245a570d5088.json  query-c7b936b80648bc0c7bd1bbeef9a9a8f1fe367028c331c4e5ca1e8b39a72a63bd.json  query-dd65e2d01e8f3e57515816293b21b949882e4d440743505bf13ae1cac450ff03.json  query-df20335a70554d9e64ee17b96f84a0c1973766e25d67644f9c5fd9efe5c45541.json  query-e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855.json  query-ef42aec8cbaaa100a8a92d5ee364358a64547e79b61a225c208631b6814c73d8.json  query-fff2c5970bfee66b6aa005022d4c108625241f78e6d33dbadaa874bc52e6169f.json
crates/common-core/: Cargo.toml  Dockerfile  build.rs
crates/common-core/.sqlx/: query-121493bda6fcb02815003840868be28859bc8600336b2aa3f83ac5720d065178.json  query-19bce890bb1a7998411a29c4ca38ecf781646f7f9f6ddd1592ffff7ff919f2de.json  query-258590755dd8d4a72fad712dd9969fdb2446c1cd12eca1b6c02ccf8003fc92a7.json  query-4560c237741ce9d4166aecd669770b3360a3ac71e649b293efb88d92c3254068.json  query-46a2e2742dcf410e8f7fd66653b536d62bbc48cdc96fe1de479649702bd8763e.json  query-ad9b4420222b4e831c745620f978c480e96a0db5e1c207dca592b1d7ff3fbc2b.json  query-c32c3ac45a1d77660bf8839c23514f1a30bcd8c5b355c3ba48ef1963d3192684.json
crates/common-core/src/: app_cx.rs  asset.rs  config.rs  lib.rs  signal.rs
crates/common-core/src/bitcoin/: client.rs
crates/common-core/src/test/: mod.rs
crates/common-core/src/trading/: mod.rs  orderbook.rs  pending_fill.rs  self_trade_protection.rs  te_response.rs  try_fill_order.rs
crates/common-core/src/web/: mod.rs  trade_cancel_order.rs  trade_edit_order.rs  withdraw_status.rs  withdraw_transfer.rs
crates/common-core/src/web/middleware/: auth.rs  mod.rs  msgpack.rs
etc/: ext.conf
ex/: Cargo.toml
exchange/: Cargo.toml  build.rs
exchange/.sqlx/: query-2a0f1bb6ee5beb468683e1acb860c63c648a458e0b0e1a3d80454dbae56253fa.json  query-4b4439d719faa19f04b2dab2d73e48213f4ca6309a3caad7a58f70af7bd63ddf.json  query-cee6fa3bec9e63e0aedccd65fa6c9462024585a9a0e0c15a1b65dbb6bafa4be5.json
exchange/proto/: bitcoin_rpc.proto
exchange/src/: app_cx.rs  asset.rs  config.rs  jinja.rs  lib.rs  password.rs  schema.rs  spawn_trading_engine.rs
exchange/src/app_cx/: defer_guard.rs  reserve_ok.rs
exchange/src/bitcoin/: client.rs  mod.rs  rpc.rs
exchange/src/trading/: engine.rs  mod.rs  order.rs  orderbook.rs  pending_fill.rs  price_level.rs  self_trade_protection.rs  timeinforce.rs  trigger.rs  try_fill_order.rs
exchange/src/web/: api_key_create.rs  asset.rs  deposit_create_addr.rs  deposit_list_addrs.rs  deposit_status.rs  html_home.rs  html_index.rs  mod.rs  public_time.rs  session_create.rs  session_delete.rs  trade_add_order.rs  trade_cancel_order.rs  trade_edit_order.rs  user_add.rs  user_balance.rs  user_create.rs  user_delete.rs  user_edit.rs  user_get.rs  withdraw_create_addr.rs  withdraw_delete_addr.rs  withdraw_list_addrs.rs  withdraw_status.rs  withdraw_transfer.rs
exchange/src/web/middleware/: auth.rs  mod.rs
frontend/: Dockerfile  Dockerfile.frontend  app.css  app.html  bun.lockb  package-lock.json  package.json  sign-in.html  sign-up.html  svelte.config.js
migrations/: 0000_manage_updated_at.up.sql  0001_create_tbl_users.down.sql  0001_create_tbl_users.up.sql  0002_create_tbl_trading_event_source.down.sql  0002_create_tbl_trading_event_source.up.sql  0003_create_tbl_user_addrs.up.sql  0005_create_tbl_session_tokens.up.sql  0006_create_fnc_calculate_balance.down.sql  0007_update_tbl_account_tx_journal_add_txid_col.down.sql  0007_update_tbl_account_tx_journal_add_txid_col.up.sql  0008_insert_into_accounts_bitcoin_account.up.sql  20240605060836_create_users.down.sql  20240605060917_create_orders_event_source.down.sql  20240605060917_create_orders_event_source.up.sql  20240605060925_create_btc_deposit_addresses.down.sql  20240605060930_create_accounting.down.sql  20240610031408_create_api_keys.down.sql  20240610031408_create_api_keys.up.sql  20240610031806_create_session_tokens.down.sql  20240610031806_create_session_tokens.up.sql  (+2 more)
(+64 files in other folders)
