[package]
name = "exchange"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.2", features = ["alloc"] }
email_address = "0.2.4"
hex = "0.4"
mime = "0.3.17"
rand = "0.8.5"
rmp = "0.8.12"
rmp-serde = "1.1.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
thiserror = "1.0.49"
tinyvec = { version = "1.6.0", features = ["rustc_1_57", "std", "alloc"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls-vendored"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "serde", "zerocopy", "fast-rng"] }

[dependencies.sqlx]
version = "0.7.2"
default-features = false
features = [
    "postgres",
    "tls-native-tls",
    "rust_decimal",
    "runtime-tokio",
    "macros",
    "uuid",
]

[dependencies.redis]
version = "0.23.3"
features = ["tokio", "tokio-comp", "connection-manager", "ahash"]

[dependencies.axum]
version = "0.6.20"
default-features = false
features = [
    "headers",
    "http1",
    "tracing",
    "ws",
    "macros",
    "matched-path",
    "multipart",
    "original-uri",
    "tokio",
    "tower-log",
    "query",
    "json",
]

[profile.release]
codegen-units = 1
lto = true

[dev-dependencies]
hex = "0.4"
