[package]
name = "exchange"
version = "0.1.0"
edition = "2021"
build = "./build.rs"

[dependencies]
ahash = "0.8.3"
argon2 = { version = "0.5.2", features = ["alloc"] }
async-trait = "0.1.74"
atomic = "0.6.0"
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header"] }
bitcoin = { version = "0.30.1", features = [
    "rand",
    "serde",
    "base64",
    "bitcoinconsensus",
    "core2",
] }
bytemuck = "1.14.0"
chrono = "0.4.31"
crossterm = "0.27.0"
dotenv = "0.15.0"
email_address = "0.2.4"
ethers = { version = "2.0.10", features = ["ws"] }
futures = "0.3.28"
hex = "0.4"
jsonrpc-async = "2.0.2"
mime = "0.3.17"
prost = "0.12.1"
rand = "0.8.5"
ratatui = { version = "0.24.0", features = ["all-widgets"] }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
rmp = "0.8.12"
rmp-serde = "1.1.2"
rustc-hex = "2.1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
thiserror = "1.0.49"
time = "0.3.36"
tinyvec = { version = "1.6.0", features = ["rustc_1_57", "std", "alloc"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls-vendored"] }
toml = "0.8.2"
tonic = "0.10.2"
tonic-reflection = "0.10.2"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "serde", "zerocopy", "fast-rng"] }

[dependencies.sqlx]
version = "0.7.2"
default-features = false
features = [
    "postgres",
    "tls-native-tls",
    "rust_decimal",
    "runtime-tokio",
    "macros",
    "migrate",
    "uuid",
    "time",
    "json",
]

[dependencies.axum]
version = "0.7"
default-features = false
features = [
    "http1",
    "tracing",
    "ws",
    "macros",
    "matched-path",
    "multipart",
    "original-uri",
    "tokio",
    "tower-log",
    "query",
    "json",
]

[profile.release]
codegen-units = 1
lto = true

[build-dependencies]
glob = "0.3.1"
tonic-build = "0.10.2"
