[package]
name = "common-core"
version = "100.0.0"
edition = "2024"
build = "./build.rs"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
atomic = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
axum-htmx = { workspace = true }
bitcoin = { workspace = true }
bitcoincore-rpc-json = { workspace = true }
bytemuck = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
dotenv = { workspace = true }
email_address = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
jsonrpc-async = { workspace = true }
mime = { workspace = true }
mime_guess = { workspace = true }
minijinja = { workspace = true }
minijinja-autoreload = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true }
rmp = { workspace = true }
rmp-serde = { workspace = true }
rustc-hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tinyvec = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
glob = "0.3.1"
tonic-build = "0.10.2"
